<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_search"
        android:title="Search"
        app:showAsAction="ifRoom|withText"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:id="@+id/action_settings_and_help"
        android:orderInCategory="100"
        android:title="@string/settings_and_help_menu_option_string"/>

    <item
        android:id="@+id/action_rate_app"
        android:orderInCategory="100"
        android:title="@string/rate_option_string"/>

    <item
        android:id="@+id/action_invite"
        android:orderInCategory="100"
        android:title="@string/invitation_option_string"/>

</menu>